k8s/infrastructure/network/policies/applications/web/babybuddy/allow-babybuddy-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: babybuddy-access
  namespace: babybuddy
  labels:
    policy-type: web-audit
spec:
  endpointSelector:
    matchLabels:
      app: babybuddy
  description: "Allow BabyBuddy access"
  ingress:
  - fromEntities:
    - host
    - remote-node
    - ingress
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toCIDR: ["10.0.0.0/8"]
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
